@@ -22,6 +22,7 @@ import java.awt.ComponentOrientation;
 import java.awt.Container;
 import java.awt.Desktop;
 import java.awt.Dimension;
+import java.awt.Event;
 import java.awt.FlowLayout;
 import java.awt.Font;
 import java.awt.Graphics;
@@ -37,12 +38,17 @@ import java.awt.event.ActionListener;
 import java.awt.event.KeyEvent;
 import java.io.File;
 import java.io.IOException;
-import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.text.NumberFormat;
 import java.text.ParseException;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.concurrent.TimeUnit;
 import java.util.function.Predicate;
 import javax.swing.AbstractAction;
 import javax.swing.AbstractButton;
@@ -61,6 +67,7 @@ import javax.swing.JPanel;
 import javax.swing.JPopupMenu;
 import javax.swing.JSlider;
 import javax.swing.JSpinner;
+import javax.swing.JTextArea;
 import javax.swing.JTextField;
 import javax.swing.JTextPane;
 import javax.swing.KeyStroke;
@@ -99,6 +106,19 @@ public class GuiUtils {
   public static final String HTML_BR = "<br>";
 
   public static final String NEWLINE = "newline"; // NON-NLS
+
+  /** Enum representing the 9 possible window positions on the screen. */
+  public enum WindowPosition {
+    CENTER, // Center of the screen
+    NW, // Northwest (top-left)
+    N, // North (top-center)
+    NE, // Northeast (top-right)
+    W, // West (middle-left)
+    E, // East (middle-right)
+    SW, // Southwest (bottom-left)
+    S, // South (bottom-center)
+    SE // Southeast (bottom-right)
+  }
 
   public enum IconColor {
     // see https://jetbrains.design/intellij/principles/icons/#action-icons
@@ -364,32 +384,83 @@ public class GuiUtils {
   }
 
   public static void showCenterScreen(Window window) {
-    try {
-      Rectangle bound =
-          GraphicsEnvironment.getLocalGraphicsEnvironment()
-              .getDefaultScreenDevice()
-              .getDefaultConfiguration()
-              .getBounds();
-      window.setLocation(
-          bound.x + (bound.width - window.getWidth()) / 2,
-          bound.y + (bound.height - window.getHeight()) / 2);
-    } catch (Exception e) {
-      LOGGER.error("Cannot center the window to the screen", e);
-    }
-    window.setVisible(true);
+    showCenterScreen(window, null, WindowPosition.CENTER);
   }
 
   public static void showCenterScreen(Window window, Component parent) {
-    if (parent == null) {
-      showCenterScreen(window);
-    } else {
-      Dimension sSize = parent.getSize();
-      Dimension wSize = window.getSize();
-      Point p = parent.getLocationOnScreen();
-      window.setLocation(
-          p.x + ((sSize.width - wSize.width) / 2), p.y + ((sSize.height - wSize.height) / 2));
-      window.setVisible(true);
+    showCenterScreen(window, parent, WindowPosition.CENTER);
+  }
+
+  /**
+   * Positions a window on the screen according to the specified direction.
+   *
+   * @param window The window to position
+   * @param parent The parent component to position relative to, or null for screen positioning
+   * @param direction The position direction: CENTER, NW, N, NE, W, E, SW, S, SE
+   */
+  public static void showCenterScreen(Window window, Component parent, WindowPosition direction) {
+    try {
+      Rectangle bound;
+      if (parent == null) {
+        bound =
+            GraphicsEnvironment.getLocalGraphicsEnvironment()
+                .getDefaultScreenDevice()
+                .getDefaultConfiguration()
+                .getBounds();
+      } else {
+        Dimension sSize = parent.getSize();
+        Point p = parent.getLocationOnScreen();
+        bound = new Rectangle(p.x, p.y, sSize.width, sSize.height);
+      }
+
+      int x, y;
+      int windowWidth = window.getWidth();
+      int windowHeight = window.getHeight();
+
+      switch (direction) {
+        case NW -> {
+          x = bound.x;
+          y = bound.y;
+        }
+        case N -> {
+          x = bound.x + (bound.width - windowWidth) / 2;
+          y = bound.y;
+        }
+        case NE -> {
+          x = bound.x + bound.width - windowWidth;
+          y = bound.y;
+        }
+        case W -> {
+          x = bound.x;
+          y = bound.y + (bound.height - windowHeight) / 2;
+        }
+        case E -> {
+          x = bound.x + bound.width - windowWidth;
+          y = bound.y + (bound.height - windowHeight) / 2;
+        }
+        case SW -> {
+          x = bound.x;
+          y = bound.y + bound.height - windowHeight;
+        }
+        case S -> {
+          x = bound.x + (bound.width - windowWidth) / 2;
+          y = bound.y + bound.height - windowHeight;
+        }
+        case SE -> {
+          x = bound.x + bound.width - windowWidth;
+          y = bound.y + bound.height - windowHeight;
+        }
+        default -> { // CENTER
+          x = bound.x + (bound.width - windowWidth) / 2;
+          y = bound.y + (bound.height - windowHeight) / 2;
+        }
+      }
+
+      window.setLocation(x, y);
+    } catch (Exception e) {
+      LOGGER.error("Cannot position the window", e);
     }
+    window.setVisible(true);
   }
 
   public static void addChangeListener(JSlider slider, ChangeListener listener) {
@@ -400,6 +471,13 @@ public class GuiUtils {
       }
     }
     slider.addChangeListener(listener);
+  }
+
+  public static JSlider createSlider(int min, int max, int value, int tickDivisions) {
+    JSlider slider = new JSlider(min, max, value);
+    slider.setMajorTickSpacing(Math.max(1, (max - min) / tickDivisions));
+    slider.setPaintTicks(true);
+    return slider;
   }
 
   private static void addCheckActionToJFormattedTextField(final JFormattedTextField textField) {
@@ -535,7 +613,7 @@ public class GuiUtils {
       item.setMnemonic((char) mnemonic);
     }
     if (acceleratorKey != 0) {
-      item.setAccelerator(KeyStroke.getKeyStroke(acceleratorKey, java.awt.Event.CTRL_MASK));
+      item.setAccelerator(KeyStroke.getKeyStroke(acceleratorKey, Event.CTRL_MASK));
     }
     return item;
   }
@@ -548,17 +626,35 @@ public class GuiUtils {
     return jButtonHelp;
   }
 
+  /**
+   * Build a panel containing a wrapped read-only message and a help button on the right side that
+   * opens the given documentation topic. Useful for {@code JOptionPane.showXxxDialog(..., panel,
+   * ...)} confirmations where the user must understand the implications of the choice.
+   *
+   * @param message the message to display
+   * @param helpTopic the documentation topic appended to {@code weasis.help.online}
+   * @return a JPanel ready to be passed to a JOptionPane
+   */
+  public static JPanel buildHelpMessagePanel(String message, String helpTopic) {
+    JPanel panel = new JPanel(new java.awt.BorderLayout(10, 0));
+    JTextArea textArea = new JTextArea(message);
+    textArea.setEditable(false);
+    textArea.setOpaque(false);
+    textArea.setLineWrap(true);
+    textArea.setWrapStyleWord(true);
+    textArea.setColumns(40);
+    panel.add(textArea, java.awt.BorderLayout.CENTER);
+    panel.add(createHelpButton(helpTopic), java.awt.BorderLayout.EAST);
+    return panel;
+  }
+
   public static ActionListener createHelpActionListener(JButton jButtonHelp, String topic) {
-    return e -> {
-      try {
-        GuiUtils.openInDefaultBrowser(
-            jButtonHelp,
-            new URL(
-                GuiUtils.getUICore().getSystemPreferences().getProperty("weasis.help.online")
-                    + topic));
-      } catch (MalformedURLException e1) {
-        LOGGER.error("Cannot open online help", e1);
-      }
+    return _ -> {
+      GuiUtils.openInDefaultBrowser(
+          jButtonHelp,
+          URI.create(
+              GuiUtils.getUICore().getSystemPreferences().getProperty("weasis.help.online")
+                  + topic));
     };
   }
 
@@ -579,12 +675,7 @@ public class GuiUtils {
   public static void openInDefaultBrowser(Component parent, URI uri) {
     if (uri != null) {
       if (SystemInfo.isLinux) {
-        try {
-          String[] cmd = new String[] {"xdg-open", uri.toString()}; // NON-NLS
-          Runtime.getRuntime().exec(cmd);
-        } catch (IOException e) {
-          LOGGER.error("Cannot open URL to the system browser", e);
-        }
+        openInLinuxBrowser(parent, uri);
       } else if (Desktop.isDesktopSupported()) {
         final Desktop desktop = Desktop.getDesktop();
         if (desktop.isSupported(Desktop.Action.BROWSE)) {
@@ -604,34 +695,208 @@ public class GuiUtils {
     }
   }
 
-  public static void openSystemExplorer(Component parent, File file) {
-    if (file != null) {
+  public static void openSystemExplorer(Component parent, Path path) {
+    if (path != null) {
       if (SystemInfo.isLinux) {
-        openCommand("xdg-open", file); // NON-NLS
+        openCommand(parent, "xdg-open", path.toString()); // NON-NLS
       } else if (Desktop.isDesktopSupported()
           && Desktop.getDesktop().isSupported(Desktop.Action.BROWSE_FILE_DIR)) {
-        Desktop.getDesktop().browseFileDirectory(file);
+        Desktop.getDesktop().browseFileDirectory(path.toFile());
       } else if (SystemInfo.isWindows) {
-        openCommand("explorer", file); // NON-NLS
+        openCommand(parent, "explorer", path.toString()); // NON-NLS
       } else if (SystemInfo.isMacOS) {
-        openCommand("/usr/bin/open", file); // NON-NLS
+        openCommand(parent, "/usr/bin/open", path.toString()); // NON-NLS
       } else {
         JOptionPane.showMessageDialog(
             WinUtil.getValidComponent(parent),
-            Messages.getString("JMVUtils.browser") + StringUtil.COLON_AND_SPACE + file.getPath(),
+            Messages.getString("JMVUtils.browser") + StringUtil.COLON_AND_SPACE + path,
             Messages.getString("JMVUtils.error"),
             JOptionPane.ERROR_MESSAGE);
       }
     }
   }
 
-  private static void openCommand(String cmd, File file) {
-    try {
-      String[] command = new String[] {cmd, file.getPath()}; // NON-NLS
-      Runtime.getRuntime().exec(command);
-    } catch (IOException e) {
-      LOGGER.error("Cannot open a file to the system explorer", e);
+  /** Browser executables tried, in order, when no user preference can be resolved. */
+  private static final List<String> LINUX_BROWSER_FALLBACKS =
+      List.of(
+          "x-www-browser", // Debian/Ubuntu alternatives symlink to the system browser
+          "google-chrome",
+          "google-chrome-stable",
+          "brave-browser",
+          "brave-browser-stable",
+          "vivaldi",
+          "vivaldi-stable",
+          "microsoft-edge",
+          "microsoft-edge-stable",
+          "opera",
+          "chromium",
+          "chromium-browser",
+          "firefox"); // last: on Ubuntu this is a snap and cannot read host /tmp // NON-NLS
+
+  /**
+   * Opens a URI in a web browser on Linux.
+   *
+   * <p>{@code xdg-open} resolves a {@code file://} URI by the file's MIME type, so a local HTML
+   * page is handed to whatever application is registered for {@code text/html} — which is not
+   * necessarily a browser, and may be a sandboxed app unable to read the file. For {@code file://}
+   * URIs a web browser is therefore launched directly. Other schemes keep going through {@code
+   * xdg-open}, which dispatches them to the user's default browser.
+   */
+  private static void openInLinuxBrowser(Component parent, URI uri) {
+    if ("file".equalsIgnoreCase(uri.getScheme())) { // NON-NLS
+      String browser = findLinuxBrowserCommand();
+      openCommand(parent, browser == null ? "xdg-open" : browser, uri.toString()); // NON-NLS
+    } else {
+      openCommand(parent, "xdg-open", uri.toString()); // NON-NLS
     }
+  }
+
+  /**
+   * Resolves a web browser executable on Linux, preferring the {@code $BROWSER} environment
+   * variable, then the user's configured default web browser, then a list of well-known browsers.
+   *
+   * @return a browser command (name or path), or {@code null} if none could be found
+   */
+  private static String findLinuxBrowserCommand() {
+    List<String> candidates = new ArrayList<>();
+    String browserEnv = System.getenv("BROWSER");
+    if (StringUtil.hasText(browserEnv)) {
+      for (String entry : browserEnv.split(File.pathSeparator)) {
+        String exe = entry.trim().split("\\s+")[0]; // drop any %s placeholder
+        if (!exe.isEmpty()) {
+          candidates.add(exe);
+        }
+      }
+    }
+    String defaultBrowser = resolveLinuxDefaultBrowser();
+    if (defaultBrowser != null) {
+      candidates.add(defaultBrowser);
+    }
+    candidates.addAll(LINUX_BROWSER_FALLBACKS);
+    return candidates.stream().filter(GuiUtils::isExecutableOnPath).findFirst().orElse(null);
+  }
+
+  /** Returns the executable of the user's default web browser, via {@code xdg-settings}. */
+  private static String resolveLinuxDefaultBrowser() {
+    try {
+      Process process =
+          new ProcessBuilder("xdg-settings", "get", "default-web-browser") // NON-NLS
+              .redirectError(ProcessBuilder.Redirect.DISCARD)
+              .start();
+      process.getOutputStream().close();
+      if (process.waitFor(5, TimeUnit.SECONDS) && process.exitValue() == 0) {
+        String desktopEntry =
+            new String(process.getInputStream().readAllBytes(), StandardCharsets.UTF_8).strip();
+        if (StringUtil.hasText(desktopEntry)) {
+          return execFromDesktopEntry(desktopEntry);
+        }
+      }
+    } catch (IOException e) {
+      LOGGER.debug("Cannot query the default web browser", e);
+    } catch (InterruptedException e) {
+      Thread.currentThread().interrupt();
+    }
+    return null;
+  }
+
+  /**
+   * Extracts the executable from the {@code Exec=} line of a freedesktop {@code .desktop} entry.
+   */
+  private static String execFromDesktopEntry(String desktopEntry) {
+    String fileName = desktopEntry.endsWith(".desktop") ? desktopEntry : desktopEntry + ".desktop";
+    for (Path dir : linuxApplicationDirs()) {
+      Path desktopFile = dir.resolve(fileName);
+      if (Files.isReadable(desktopFile)) {
+        try {
+          for (String line : Files.readAllLines(desktopFile, StandardCharsets.UTF_8)) {
+            if (line.startsWith("Exec=")) { // NON-NLS
+              String exec = line.substring(5).trim();
+              return exec.isEmpty() ? null : exec.split("\\s+")[0]; // drop %U/%f field codes
+            }
+          }
+        } catch (IOException e) {
+          LOGGER.debug("Cannot read desktop entry {}", desktopFile, e);
+        }
+      }
+    }
+    return null;
+  }
+
+  /** Standard freedesktop directories holding {@code .desktop} application entries. */
+  private static List<Path> linuxApplicationDirs() {
+    List<Path> dirs = new ArrayList<>();
+    String dataHome = System.getenv("XDG_DATA_HOME");
+    if (StringUtil.hasText(dataHome)) {
+      dirs.add(Path.of(dataHome, "applications"));
+    } else {
+      dirs.add(Path.of(System.getProperty("user.home"), ".local", "share", "applications"));
+    }
+    String dataDirs = System.getenv("XDG_DATA_DIRS");
+    if (!StringUtil.hasText(dataDirs)) {
+      dataDirs = "/usr/local/share:/usr/share"; // NON-NLS
+    }
+    for (String dir : dataDirs.split(File.pathSeparator)) {
+      if (!dir.isEmpty()) {
+        dirs.add(Path.of(dir, "applications"));
+      }
+    }
+    dirs.add(Path.of("/var/lib/snapd/desktop/applications")); // NON-NLS
+    return dirs;
+  }
+
+  /** Tests whether the given command resolves to an executable file (absolute path or on PATH). */
+  private static boolean isExecutableOnPath(String command) {
+    if (command.indexOf(File.separatorChar) >= 0) {
+      return Files.isExecutable(Path.of(command));
+    }
+    String path = System.getenv("PATH");
+    if (!StringUtil.hasText(path)) {
+      return false;
+    }
+    for (String dir : path.split(File.pathSeparator)) {
+      if (!dir.isEmpty() && Files.isExecutable(Path.of(dir, command))) {
+        return true;
+      }
+    }
+    return false;
+  }
+
+  /**
+   * Launches an external command (a launcher such as {@code xdg-open}, {@code explorer} or {@code
+   * open}, or a browser executable) to open the given target.
+   *
+   * <p>Launchers delegate to the target application and return promptly, as does a browser when an
+   * instance is already running; a freshly started browser instead stays in the foreground. The
+   * method therefore waits only briefly: a non-zero exit within that window is reported as a
+   * failure, while a process still running afterwards is assumed to have opened the target and is
+   * left running (destroying it would close the browser it just opened).
+   */
+  private static void openCommand(Component parent, String cmd, String target) {
+    try {
+      Process process =
+          new ProcessBuilder(cmd, target)
+              .redirectOutput(ProcessBuilder.Redirect.DISCARD)
+              .redirectError(ProcessBuilder.Redirect.DISCARD)
+              .start();
+      process.getOutputStream().close();
+      if (process.waitFor(5, TimeUnit.SECONDS) && process.exitValue() != 0) {
+        LOGGER.error("'{}' failed (exit {}) for {}", cmd, process.exitValue(), target);
+        showOpenCommandError(parent, target);
+      }
+    } catch (IOException e) {
+      LOGGER.error("Cannot run '{}' for {}", cmd, target, e);
+      showOpenCommandError(parent, target);
+    } catch (InterruptedException e) {
+      Thread.currentThread().interrupt();
+    }
+  }
+
+  private static void showOpenCommandError(Component parent, String target) {
+    JOptionPane.showMessageDialog(
+        WinUtil.getValidComponent(parent),
+        Messages.getString("JMVUtils.browser") + StringUtil.COLON_AND_SPACE + target,
+        Messages.getString("JMVUtils.error"),
+        JOptionPane.ERROR_MESSAGE);
   }
 
   public static HyperlinkListener buildHyperlinkListener() {
