@@ -10,10 +10,12 @@
 package org.weasis.core.ui.editor;
 
 import java.awt.Desktop;
-import java.io.File;
 import java.io.IOException;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.util.Collections;
 import java.util.List;
+import java.util.concurrent.TimeUnit;
 import javax.swing.JMenu;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -36,23 +38,32 @@ public abstract class MimeSystemAppViewer implements SeriesViewer<MediaElement> 
     return Collections.emptyList();
   }
 
-  public static void startAssociatedProgramFromLinux(File file) {
-    if (file != null && file.canRead()) {
+  public static void startAssociatedProgramFromLinux(Path path) {
+    if (path != null && Files.isReadable(path)) {
       try {
-        String[] cmd = new String[] {"xdg-open", file.getCanonicalPath()}; // NON-NLS
-        Runtime.getRuntime().exec(cmd);
+        Process process =
+            new ProcessBuilder("xdg-open", path.toString()) // NON-NLS
+                .redirectOutput(ProcessBuilder.Redirect.DISCARD)
+                .redirectError(ProcessBuilder.Redirect.DISCARD)
+                .start();
+        process.getOutputStream().close();
+        if (process.waitFor(5, TimeUnit.SECONDS) && process.exitValue() != 0) {
+          LOGGER.error("'xdg-open' failed (exit {}) for {}", process.exitValue(), path); // NON-NLS
+        }
       } catch (IOException e) {
-        LOGGER.error(ERROR_MSG, file, e);
+        LOGGER.error(ERROR_MSG, path, e);
+      } catch (InterruptedException e) {
+        Thread.currentThread().interrupt();
       }
     }
   }
 
-  public static void startAssociatedProgramFromDesktop(final Desktop desktop, File file) {
-    if (file != null && file.canRead()) {
+  public static void startAssociatedProgramFromDesktop(final Desktop desktop, Path path) {
+    if (path != null && Files.isReadable(path)) {
       try {
-        desktop.open(file);
+        desktop.open(path.toFile());
       } catch (IOException e) {
-        LOGGER.error(ERROR_MSG, file, e);
+        LOGGER.error(ERROR_MSG, path, e);
       }
     }
   }
