@@ -12,6 +12,8 @@ package org.weasis.core.api.util;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertSame;
 
+import java.text.DecimalFormat;
+import java.text.DecimalFormatSymbols;
 import java.text.NumberFormat;
 import java.time.ZoneId;
 import java.time.ZonedDateTime;
@@ -20,7 +22,6 @@ import java.time.format.FormatStyle;
 import java.util.Locale;
 import java.util.ResourceBundle.Control;
 import org.junit.jupiter.api.Test;
-import org.junitpioneer.jupiter.DefaultLocale;
 
 class LocalUtilTest {
 
@@ -33,46 +34,51 @@ class LocalUtilTest {
    * </ul>
    */
   @Test
-  @DefaultLocale(language = "fr", country = "CH")
   void testTextToLocale() {
-    Control control = Control.getControl(Control.FORMAT_PROPERTIES);
+    Locale previousDefault = Locale.getDefault();
+    Locale.setDefault(Locale.of("fr", "CH")); // NON-NLS
+    try {
+      Control control = Control.getControl(Control.FORMAT_PROPERTIES);
 
-    Locale result = LocalUtil.textToLocale(null);
-    assertSame(Locale.ENGLISH, result);
-    assertEquals("en", LocalUtil.localeToText(null));
+      Locale result = LocalUtil.textToLocale(null);
+      assertSame(Locale.ENGLISH, result);
+      assertEquals("en", LocalUtil.localeToText(null));
 
-    result = LocalUtil.textToLocale("");
-    assertSame(Locale.ENGLISH, result);
-    assertEquals("en", LocalUtil.localeToText(result));
+      result = LocalUtil.textToLocale("");
+      assertSame(Locale.ENGLISH, result);
+      assertEquals("en", LocalUtil.localeToText(result));
 
-    result = LocalUtil.textToLocale("system"); // NON-NLS
-    assertSame(Locale.getDefault(), result);
+      result = LocalUtil.textToLocale("system"); // NON-NLS
+      assertSame(Locale.getDefault(), result);
 
-    result = LocalUtil.textToLocale("test-invalid$"); // NON-NLS
-    assertEquals("test", LocalUtil.localeToText(result));
+      result = LocalUtil.textToLocale("test-invalid$"); // NON-NLS
+      assertEquals("test", LocalUtil.localeToText(result));
 
-    result = LocalUtil.textToLocale("en"); // NON-NLS
-    assertSame(Locale.ENGLISH, result);
-    assertEquals("en", LocalUtil.localeToText(result));
+      result = LocalUtil.textToLocale("en"); // NON-NLS
+      assertSame(Locale.ENGLISH, result);
+      assertEquals("en", LocalUtil.localeToText(result));
 
-    result = LocalUtil.textToLocale("fr_FR"); // NON-NLS
-    assertSame(Locale.FRANCE, result);
+      result = LocalUtil.textToLocale("fr_FR"); // NON-NLS
+      assertSame(Locale.FRANCE, result);
 
-    result = LocalUtil.textToLocale("zh_Hans"); // NON-NLS
-    String val = control.toBundleName("", result);
-    assertEquals("_zh_Hans", val);
-    result = LocalUtil.textToLocale("zh-Hans-TW"); // NON-NLS
-    val = control.toBundleName("message", result); // NON-NLS
-    assertEquals("message_zh_Hans_TW", val);
+      result = LocalUtil.textToLocale("zh_Hans"); // NON-NLS
+      String val = control.toBundleName("", result);
+      assertEquals("_zh_Hans", val);
+      result = LocalUtil.textToLocale("zh-Hans-TW"); // NON-NLS
+      val = control.toBundleName("message", result); // NON-NLS
+      assertEquals("message_zh_Hans_TW", val);
 
-    // ISO3 language code: SRP
-    result = LocalUtil.textToLocale("en_BA-SRP"); // NON-NLS
-    val = control.toBundleName("message", result); // NON-NLS
-    assertEquals("message_en_BA", val);
+      // ISO3 language code: SRP
+      result = LocalUtil.textToLocale("en_BA-SRP"); // NON-NLS
+      val = control.toBundleName("message", result); // NON-NLS
+      assertEquals("message_en_BA", val);
 
-    result = LocalUtil.textToLocale("sr_Latn"); // NON-NLS
-    val = control.toBundleName("message", result); // NON-NLS
-    assertEquals("message_sr_Latn", val);
+      result = LocalUtil.textToLocale("sr_Latn"); // NON-NLS
+      val = control.toBundleName("message", result); // NON-NLS
+      assertEquals("message_sr_Latn", val);
+    } finally {
+      Locale.setDefault(previousDefault);
+    }
   }
 
   /**
@@ -91,9 +97,13 @@ class LocalUtilTest {
     Locale.setDefault(Locale.Category.FORMAT, locale);
 
     NumberFormat nf = NumberFormat.getInstance();
-    assertEquals("2’543’456.346", nf.format(number));
-    assertEquals("2’543’456.346", String.format("%,.3f", number));
-    assertEquals("2’543’456.346", "%,.3f".formatted(number));
+    DecimalFormatSymbols symbols = ((DecimalFormat) nf).getDecimalFormatSymbols();
+    String grpSep = String.valueOf(symbols.getGroupingSeparator());
+    String decSep = String.valueOf(symbols.getDecimalSeparator());
+    String expected = "2" + grpSep + "543" + grpSep + "456" + decSep + "346";
+    assertEquals(expected, nf.format(number));
+    assertEquals(expected, String.format("%,.3f", number));
+    assertEquals(expected, "%,.3f".formatted(number));
     assertEquals(
         "Donnerstag, 25. November 2021, 15:39:59 Mittlere Greenwich-Zeit",
         DateTimeFormatter.ofLocalizedDateTime(FormatStyle.FULL)
@@ -102,9 +112,13 @@ class LocalUtilTest {
     locale = Locale.of("fr", "CH"); // NON-NLS
     Locale.setDefault(Locale.Category.FORMAT, locale);
     nf = NumberFormat.getInstance();
-    assertEquals("2 543 456,346", nf.format(number));
-    assertEquals("2 543 456,346", String.format("%,.3f", number));
-    assertEquals("2 543 456,346", "%,.3f".formatted(number));
+    symbols = ((DecimalFormat) nf).getDecimalFormatSymbols();
+    grpSep = String.valueOf(symbols.getGroupingSeparator());
+    decSep = String.valueOf(symbols.getDecimalSeparator());
+    expected = "2" + grpSep + "543" + grpSep + "456" + decSep + "346";
+    assertEquals(expected, nf.format(number));
+    assertEquals(expected, String.format("%,.3f", number));
+    assertEquals(expected, "%,.3f".formatted(number));
     assertEquals(
         "jeudi, 25 novembre 2021, 15.39:59 h heure moyenne de Greenwich",
         DateTimeFormatter.ofLocalizedDateTime(FormatStyle.FULL)
