@@ -12,6 +12,7 @@ package org.weasis.dicom.au;
 import java.awt.event.KeyEvent;
 import java.beans.PropertyChangeEvent;
 import java.beans.PropertyChangeListener;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import javax.swing.JComponent;
@@ -21,10 +22,10 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.weasis.core.api.explorer.ObservableEvent;
 import org.weasis.core.api.gui.InsertableUtil;
+import org.weasis.core.api.gui.layout.MigLayoutModel;
 import org.weasis.core.api.gui.util.AppProperties;
 import org.weasis.core.api.gui.util.GuiExecutor;
 import org.weasis.core.api.gui.util.GuiUtils;
-import org.weasis.core.api.image.GridBagLayoutModel;
 import org.weasis.core.api.media.data.MediaSeries;
 import org.weasis.core.api.media.data.MediaSeriesGroup;
 import org.weasis.core.api.media.data.Series;
@@ -41,25 +42,25 @@ import org.weasis.core.ui.util.Toolbar;
 import org.weasis.dicom.codec.DicomImageElement;
 import org.weasis.dicom.codec.TagD;
 import org.weasis.dicom.codec.TagD.Level;
-import org.weasis.dicom.explorer.DicomExportAction;
 import org.weasis.dicom.explorer.DicomModel;
 import org.weasis.dicom.explorer.DicomViewerPlugin;
-import org.weasis.dicom.explorer.ExportToolBar;
-import org.weasis.dicom.explorer.ImportToolBar;
+import org.weasis.dicom.explorer.exp.DicomExportAction;
+import org.weasis.dicom.explorer.exp.ExportToolBar;
+import org.weasis.dicom.explorer.imp.ImportToolBar;
 
 public class AuContainer extends DicomViewerPlugin implements PropertyChangeListener {
   private static final Logger LOGGER = LoggerFactory.getLogger(AuContainer.class);
 
-  static final GridBagLayoutModel DEFAULT_VIEW =
-      new GridBagLayoutModel(
+  static final MigLayoutModel DEFAULT_VIEW =
+      new MigLayoutModel(
           "1x1", // NON-NLS
           "1x1", // NON-NLS
           1,
           1,
           AuView.class.getName());
-  private static final List<GridBagLayoutModel> LAYOUT_LIST = List.of(DEFAULT_VIEW);
+  private static final List<MigLayoutModel> LAYOUT_LIST = List.of(DEFAULT_VIEW);
 
-  private static final List<SynchView> SYNCH_LIST = List.of(SynchView.NONE);
+  private static final List<SynchView> SYNCH_LIST = Collections.emptyList();
 
   public static final SeriesViewerUI UI = new SeriesViewerUI(AuContainer.class);
 
@@ -109,7 +110,7 @@ public class AuContainer extends DicomViewerPlugin implements PropertyChangeList
     this(DEFAULT_VIEW, null);
   }
 
-  public AuContainer(GridBagLayoutModel layoutModel, String uid) {
+  public AuContainer(MigLayoutModel layoutModel, String uid) {
     super(
         AU_EVENT_MANAGER,
         layoutModel,
@@ -117,7 +118,6 @@ public class AuContainer extends DicomViewerPlugin implements PropertyChangeList
         AuFactory.NAME,
         ResourceUtil.getIcon(OtherIcon.AUDIO),
         null);
-    setSynchView(SynchView.NONE);
 
     if (!UI.init.getAndSet(true)) {
       List<Toolbar> toolBars = UI.toolBars;
@@ -245,7 +245,7 @@ public class AuContainer extends DicomViewerPlugin implements PropertyChangeList
   }
 
   @Override
-  public int getViewTypeNumber(GridBagLayoutModel layout, Class<?> defaultClass) {
+  public int getViewTypeNumber(MigLayoutModel layout, Class<?> defaultClass) {
     return 0;
   }
 
@@ -288,7 +288,7 @@ public class AuContainer extends DicomViewerPlugin implements PropertyChangeList
   }
 
   @Override
-  public GridBagLayoutModel getDefaultLayoutModel() {
+  public MigLayoutModel getDefaultLayoutModel() {
     return DEFAULT_VIEW;
   }
 
@@ -325,7 +325,7 @@ public class AuContainer extends DicomViewerPlugin implements PropertyChangeList
   }
 
   @Override
-  public List<GridBagLayoutModel> getLayoutList() {
+  public List<MigLayoutModel> getLayoutList() {
     return LAYOUT_LIST;
   }
 }
