@@ -11,6 +11,7 @@ package org.weasis.dicom.viewer2d;
 
 import java.awt.Color;
 import java.awt.Dimension;
+import java.awt.Graphics2D;
 import java.awt.GridBagConstraints;
 import java.awt.Point;
 import java.awt.Rectangle;
@@ -22,6 +23,7 @@ import java.awt.event.MouseEvent;
 import java.awt.geom.Path2D;
 import java.awt.geom.Point2D;
 import java.awt.geom.Rectangle2D;
+import java.awt.image.BufferedImage;
 import java.beans.PropertyChangeEvent;
 import java.beans.PropertyChangeListener;
 import java.util.ArrayList;
@@ -60,6 +62,8 @@ import org.weasis.core.api.image.PseudoColorOp;
 import org.weasis.core.api.image.SimpleOpManager;
 import org.weasis.core.api.image.WindowOp;
 import org.weasis.core.api.image.util.ImageLayer;
+import org.weasis.core.api.image.util.MeasurableLayer;
+import org.weasis.core.api.image.util.Unit;
 import org.weasis.core.api.media.data.MediaSeries;
 import org.weasis.core.api.media.data.TagW;
 import org.weasis.core.api.service.AuditLog;
@@ -72,10 +76,11 @@ import org.weasis.core.ui.editor.image.ImageViewerPlugin;
 import org.weasis.core.ui.editor.image.MouseActions;
 import org.weasis.core.ui.editor.image.PixelInfo;
 import org.weasis.core.ui.editor.image.SynchData;
-import org.weasis.core.ui.editor.image.SynchData.Mode;
+import org.weasis.core.ui.editor.image.SynchData.SyncState;
 import org.weasis.core.ui.editor.image.SynchEvent;
 import org.weasis.core.ui.editor.image.ViewButton;
 import org.weasis.core.ui.editor.image.ViewCanvas;
+import org.weasis.core.ui.editor.image.ViewSynchData;
 import org.weasis.core.ui.model.AbstractGraphicModel;
 import org.weasis.core.ui.model.graphic.DragGraphic;
 import org.weasis.core.ui.model.graphic.Graphic;
@@ -98,7 +103,6 @@ import org.weasis.core.util.MathUtil;
 import org.weasis.dicom.codec.DicomImageElement;
 import org.weasis.dicom.codec.HiddenSeriesManager;
 import org.weasis.dicom.codec.KOSpecialElement;
-import org.weasis.dicom.codec.LazyContourLoader;
 import org.weasis.dicom.codec.PRSpecialElement;
 import org.weasis.dicom.codec.PresentationStateReader;
 import org.weasis.dicom.codec.SortSeriesStack;
@@ -107,19 +111,18 @@ import org.weasis.dicom.codec.TagD;
 import org.weasis.dicom.codec.display.OverlayOp;
 import org.weasis.dicom.codec.display.ShutterOp;
 import org.weasis.dicom.codec.display.WindowAndPresetsOp;
-import org.weasis.dicom.codec.geometry.GeometryOfSlice;
-import org.weasis.dicom.codec.geometry.ImageOrientation;
+import org.weasis.dicom.codec.geometry.*;
 import org.weasis.dicom.codec.geometry.ImageOrientation.Plan;
-import org.weasis.dicom.codec.geometry.IntersectSlice;
-import org.weasis.dicom.codec.geometry.IntersectVolume;
-import org.weasis.dicom.codec.geometry.LocalizerPoster;
 import org.weasis.dicom.codec.geometry.PatientOrientation.Biped;
+import org.weasis.dicom.codec.geometry.VectorUtils;
+import org.weasis.dicom.codec.seg.LazyContourLoader;
 import org.weasis.dicom.explorer.DicomModel;
 import org.weasis.dicom.explorer.DicomSeriesHandler;
 import org.weasis.dicom.explorer.GammaViewConfig;
 import org.weasis.dicom.explorer.pr.PrGraphicUtil;
 import org.weasis.dicom.viewer2d.KOComponentFactory.KOViewButton;
 import org.weasis.dicom.viewer2d.KOComponentFactory.KOViewButton.eState;
+import org.weasis.dicom.viewer2d.fusion.FusionOp;
 import org.weasis.dicom.viewer2d.mpr.MprView.Plane;
 import org.weasis.opencv.data.PlanarImage;
 import org.weasis.opencv.op.lut.WlPresentation;
@@ -132,6 +135,8 @@ public class View2d extends DefaultView2d<DicomImageElement> {
   public static final String P_CROSSHAIR_MODE = "mpr.crosshair.mode";
   private final Dimension oldSize;
   private final ContextMenuHandler contextMenuHandler;
+  private volatile BufferedImage segOverlayImage; // NOSONAR visibility reference
+  protected Vector3d lastCrosshairPosition;
 
   protected final KOViewButton koStarButton;
 
@@ -144,6 +149,10 @@ public class View2d extends DefaultView2d<DicomImageElement> {
     manager.addImageOperationAction(new PseudoColorOp());
     manager.addImageOperationAction(new ShutterOp());
     manager.addImageOperationAction(new OverlayOp());
+    // Fusion must be after W/L and LUT but before zoom/rotation
+    manager.addImageOperationAction(new FusionOp());
+    // Report PET SUV statistics for area measurements drawn on the fused CT image.
+    imageLayer.setSecondaryLayersSupplier(this::getFusionStatsLayers);
     // Zoom and Rotation must be the last operations for the lens
     manager.addImageOperationAction(new AffineTransformOp());
 
@@ -156,6 +165,17 @@ public class View2d extends DefaultView2d<DicomImageElement> {
     this.koStarButton = KOComponentFactory.buildKoStarButton(this);
     koStarButton.setPosition(GridBagConstraints.NORTHEAST);
     getViewButtons().add(koStarButton);
+  }
+
+  private List<MeasurableLayer> getFusionStatsLayers() {
+    Optional<ImageOpNode> node = imageLayer.getDisplayOpManager().getNode(FusionOp.OP_NAME);
+    if (node.isPresent() && node.get() instanceof FusionOp fusionOp) {
+      return fusionOp
+          .getStatsLayer(getImage(), imageLayer.getSourceRenderedImage())
+          .map(List::of)
+          .orElseGet(List::of);
+    }
+    return List.of();
   }
 
   @Override
@@ -244,13 +264,22 @@ public class View2d extends DefaultView2d<DicomImageElement> {
       SynchEvent synch = (SynchEvent) evt.getNewValue();
       SynchData synchData = (SynchData) actionsInView.get(ActionW.SYNCH_LINK.cmd());
       boolean tile = synchData != null && SynchData.Mode.TILE.equals(synchData.getMode());
-      if (synchData != null && Mode.NONE.equals(synchData.getMode())) {
+      if (synchData != null && !synchData.isSynchActivated() && this != synch.getView()) {
         return;
       }
       for (Entry<String, Object> entry : synch.getEvents().entrySet()) {
         final String command = entry.getKey();
         final Object val = entry.getValue();
-        if (synchData != null && !synchData.isActionEnable(command)) {
+        if (synchData != null
+            && !synchData.isActionEnable(command)
+            && !(command.equals(ActionW.CROSSHAIR.cmd())
+                && this == eventManager.getSelectedViewPane())) {
+          continue;
+        }
+        // In MANUAL mode, only allow SCROLL_SERIES action
+        if (synchData != null
+            && synchData.getManualSyncState() == SyncState.ON
+            && !ActionW.SCROLL_SERIES.cmd().equals(command)) {
           continue;
         }
 
@@ -259,12 +288,13 @@ public class View2d extends DefaultView2d<DicomImageElement> {
 
           if (val instanceof PresetWindowLevel preset) {
             DicomImageElement img = getImage();
-            ImageOpNode node = disOp.getNode(WindowOp.OP_NAME);
+            Optional<ImageOpNode> node = disOp.getNode(WindowOp.OP_NAME);
 
-            if (node != null) {
-              node.setParam(ActionW.WINDOW.cmd(), preset.getWindow());
-              node.setParam(ActionW.LEVEL.cmd(), preset.getLevel());
-              node.setParam(ActionW.LUT_SHAPE.cmd(), preset.getLutShape());
+            if (node.isPresent()) {
+              ImageOpNode n = node.get();
+              n.setParam(ActionW.WINDOW.cmd(), preset.getWindow());
+              n.setParam(ActionW.LEVEL.cmd(), preset.getLevel());
+              n.setParam(ActionW.LUT_SHAPE.cmd(), preset.getLutShape());
               // When series synchronization, do not synch preset from other series
               if (img == null || !img.containsPreset(preset)) {
                 List<PresetWindowLevel> presets =
@@ -273,17 +303,15 @@ public class View2d extends DefaultView2d<DicomImageElement> {
                   preset = null;
                 }
               }
-              node.setParam(ActionW.PRESET.cmd(), preset);
+              n.setParam(ActionW.PRESET.cmd(), preset);
             }
             imageLayer.updateDisplayOperations();
           }
         } else if (command.equals(ActionW.DEFAULT_PRESET.cmd())) {
           disOp.setParamValue(WindowOp.OP_NAME, ActionW.DEFAULT_PRESET.cmd(), val);
         } else if (command.equals(ActionW.LUT_SHAPE.cmd())) {
-          ImageOpNode node = disOp.getNode(WindowOp.OP_NAME);
-          if (node != null) {
-            node.setParam(ActionW.LUT_SHAPE.cmd(), val);
-          }
+          Optional<ImageOpNode> node = disOp.getNode(WindowOp.OP_NAME);
+          node.ifPresent(imageOpNode -> imageOpNode.setParam(ActionW.LUT_SHAPE.cmd(), val));
           imageLayer.updateDisplayOperations();
         } else if (command.equals(ActionW.SORT_STACK.cmd())) {
           actionsInView.put(ActionW.SORT_STACK.cmd(), val);
@@ -294,7 +322,7 @@ public class View2d extends DefaultView2d<DicomImageElement> {
         } else if (command.equals(ActionW.KO_SELECTION.cmd())) {
           int frameIndex =
               tile
-                  ? LangUtil.getNULLtoFalse(
+                  ? LangUtil.nullToFalse(
                           (Boolean) synch.getView().getActionValue(ActionW.KO_FILTER.cmd()))
                       ? 0
                       : synch.getView().getFrameIndex() - synch.getView().getTileOffset()
@@ -307,7 +335,7 @@ public class View2d extends DefaultView2d<DicomImageElement> {
         } else if (command.equals(ActionW.KO_FILTER.cmd())) {
           int frameIndex =
               tile
-                  ? LangUtil.getNULLtoFalse((Boolean) val)
+                  ? LangUtil.nullToFalse((Boolean) val)
                       ? 0
                       : synch.getView().getFrameIndex() - synch.getView().getTileOffset()
                   : -1;
@@ -359,19 +387,21 @@ public class View2d extends DefaultView2d<DicomImageElement> {
         Map<String, Object> actionsInView = selectedView.getActionsInView();
         for (ViewCanvas<DicomImageElement> v : view2ds) {
           MediaSeries<DicomImageElement> s = v.getSeries();
+          ViewSynchData synchData = (ViewSynchData) v.getActionValue(ActionW.SYNCH_LINK.cmd());
           if (s == null) {
             continue;
           }
           if (v instanceof View2d view2d
               && fruid.equals(TagD.getTagValue(s, Tag.FrameOfReferenceUID))
-              && v != selectedView) {
+              && v != selectedView
+              && synchData != null
+              && synchData.isAutoSynchActivated()) {
             DicomImageElement imgToUpdate = v.getImage();
             if (imgToUpdate != null) {
               GeometryOfSlice geometry = imgToUpdate.getSliceGeometry();
               if (geometry != null) {
-                Vector3d vn = geometry.getNormal();
-                // vn.absolute();
-                double location = p3.x * vn.x + p3.y * vn.y + p3.z * vn.z;
+                Vector3d vn = VectorUtils.orientNormalToDominantPositiveAxis(geometry.getNormal());
+                double location = vn.dot(p3);
                 DicomImageElement img =
                     s.getNearestImage(
                         location,
@@ -394,9 +424,12 @@ public class View2d extends DefaultView2d<DicomImageElement> {
           if (s == null) {
             continue;
           }
+          ViewSynchData synchData = (ViewSynchData) v.getActionValue(ActionW.SYNCH_LINK.cmd());
           if (v instanceof View2d view2d
               && fruid.equals(TagD.getTagValue(s, Tag.FrameOfReferenceUID))
-              && LangUtil.getNULLtoTrue((Boolean) actionsInView.get(LayerType.CROSSLINES.name()))) {
+              && LangUtil.nullToTrue((Boolean) actionsInView.get(LayerType.CROSSLINES.name()))
+              && synchData != null
+              && synchData.isAutoSynchActivated()) {
             view2d.computeCrosshair(p3, p);
             view2d.repaint();
           }
@@ -427,14 +460,27 @@ public class View2d extends DefaultView2d<DicomImageElement> {
     imageLayer.fireOpEvent(new ImageOpEvent(ImageOpEvent.OpEvent.RESET_DISPLAY, series, m, null));
 
     boolean changePixConfig =
-        LangUtil.getNULLtoFalse((Boolean) actionsInView.get(PRManager.TAG_CHANGE_PIX_CONFIG));
+        LangUtil.nullToFalse((Boolean) actionsInView.get(PRManager.TAG_CHANGE_PIX_CONFIG));
     if (m != null) {
       // Restore the original image pixel size
       if (changePixConfig) {
+        Unit oldUnit = m.getPixelSpacingUnit();
         m.initPixelConfiguration();
-        eventManager
-            .getAction(ActionW.SPATIAL_UNIT)
-            .ifPresent(s -> s.setSelectedItem(m.getPixelSpacingUnit()));
+        Unit newUnit = m.getPixelSpacingUnit();
+        if (oldUnit != null && newUnit != null) {
+          if (oldUnit.equals(newUnit)) {
+            // When calibration changes but the unit remains the same, the labels and measures are
+            // not updated
+            // We set the unit to null so that the refresh is done automatically and a change is
+            // detected
+            eventManager
+                .getAction(ActionW.SPATIAL_UNIT)
+                .ifPresent(s -> s.setSelectedItemWithoutTriggerAction(null));
+          }
+          eventManager
+              .getAction(ActionW.SPATIAL_UNIT)
+              .ifPresent(s -> s.setSelectedItem(m.getPixelSpacingUnit()));
+        }
       }
       deletePrLayers();
 
@@ -456,7 +502,7 @@ public class View2d extends DefaultView2d<DicomImageElement> {
       Object ko = actionsInView.get(ActionW.KO_SELECTION.cmd());
       Object filter = actionsInView.get(ActionW.FILTERED_SERIES.cmd());
       OpManager disOp = getDisplayOpManager();
-      Object preset = disOp.getParamValue(WindowOp.OP_NAME, ActionW.PRESET.cmd());
+      Object preset = disOp.getParamValue(WindowOp.OP_NAME, ActionW.PRESET.cmd()).orElse(null);
       initActionWState();
       setActionsInView(ActionW.KO_SELECTION.cmd(), ko);
       setActionsInView(ActionW.FILTERED_SERIES.cmd(), filter);
@@ -693,6 +739,7 @@ public class View2d extends DefaultView2d<DicomImageElement> {
 
   private void updateSegmentation(DicomImageElement img) {
     graphicManager.deleteByLayerType(LayerType.DICOM_SEG);
+    segOverlayImage = null;
     if (series != null && img != null) {
       String patientPseudoUID = DicomModel.getPatientPseudoUID(series);
       List<SpecialElementRegion> segList =
@@ -718,17 +765,46 @@ public class View2d extends DefaultView2d<DicomImageElement> {
           }
         }
 
+        // Separate fractional (raster overlay) and binary (vector contour) segmentations
+        List<SegContour> fractionalContours = new ArrayList<>();
         for (SegContour c : contours) {
-          // Structure graphics
-          Graphic graphic = c.getSegGraphic();
-          if (graphic != null) {
-            for (PropertyChangeListener listener : graphicManager.getGraphicsListeners()) {
-              graphic.addPropertyChangeListener(listener);
+          if (c.isFractional()) {
+            fractionalContours.add(c);
+          } else {
+            // Binary contours: render as vector graphics (existing path)
+            Graphic graphic = c.getSegGraphic();
+            if (graphic != null) {
+              for (PropertyChangeListener listener : graphicManager.getGraphicsListeners()) {
+                graphic.addPropertyChangeListener(listener);
+              }
+              graphicManager.addGraphic(graphic);
             }
-            graphicManager.addGraphic(graphic);
+          }
+        }
+
+        // Fractional contours: composite into a single RGBA overlay image
+        if (!fractionalContours.isEmpty()) {
+          PlanarImage sourceImg = img.getImage();
+          if (sourceImg != null) {
+            segOverlayImage =
+                org.weasis.core.ui.model.graphic.imp.seg.FractionalOverlay.compositeOverlays(
+                    fractionalContours, sourceImg.width(), sourceImg.height());
           }
         }
       }
+    }
+  }
+
+  @Override
+  protected void drawOnTop(Graphics2D g2d) {
+    BufferedImage overlay = segOverlayImage;
+    if (overlay != null) {
+      // Re-enter the image coordinate space (translate + affineTransform) to draw the overlay
+      // aligned with the source image pixels.
+      java.awt.geom.Point2D p = getClipViewCoordinatesOffset();
+      g2d.translate(p.getX(), p.getY());
+      g2d.drawImage(overlay, affineTransform, null);
+      g2d.translate(-p.getX(), -p.getY());
     }
   }
 
@@ -764,15 +840,14 @@ public class View2d extends DefaultView2d<DicomImageElement> {
                   getCurrentSortComparator());
           synchronized (selSeries) {
             for (DicomImageElement dcm : list) {
-              double[] loc = (double[]) dcm.getTagValue(TagW.SlicePosition);
+              Double loc = (Double) dcm.getTagValue(TagW.SlicePosition);
               if (loc != null) {
-                double position = loc[0] + loc[1] + loc[2];
-                if (min > position) {
-                  min = position;
+                if (min > loc) {
+                  min = loc;
                   firstImage = dcm;
                 }
-                if (max < position) {
-                  max = position;
+                if (max < loc) {
+                  max = loc;
                   lastImage = dcm;
                 }
               }
@@ -924,6 +999,10 @@ public class View2d extends DefaultView2d<DicomImageElement> {
               pts2.add(new Point2D.Double(dim.y + 50, p.getY()));
               addCrosshairLine(layer, pts2, color2, centerPt, centerGap);
 
+              // Remember the position so the crosshair can be redrawn after an asynchronous
+              // image change swaps the graphic model and discards these graphics.
+              lastCrosshairPosition = p3;
+
               //            PlanarImage dispImg = image.getImage();
               //            if (dispImg != null) {
               //              Rectangle2D rect =
@@ -1018,9 +1097,9 @@ public class View2d extends DefaultView2d<DicomImageElement> {
       final PixelInfo pixelInfo, final DicomImageElement imageElement, final double[] c) {
     if (c != null && c.length >= 1) {
       WlPresentation wlp = null;
-      WindowOp wlOp = (WindowOp) getDisplayOpManager().getNode(WindowOp.OP_NAME);
-      if (wlOp != null) {
-        wlp = wlOp.getWlPresentation();
+      Optional<ImageOpNode> wlOp = getDisplayOpManager().getNode(WindowOp.OP_NAME);
+      if (wlOp.isPresent() && wlOp.get() instanceof WindowOp windowOp) {
+        wlp = windowOp.getWlPresentation();
       }
       for (int i = 0; i < c.length; i++) {
         c[i] = imageElement.pixelToRealValue(c[i], wlp).doubleValue();
@@ -1056,7 +1135,7 @@ public class View2d extends DefaultView2d<DicomImageElement> {
       popupMenu.addSeparator();
       boolean graphicComplete = true;
       if (selected.size() == 1) {
-        final Graphic graph = selected.get(0);
+        final Graphic graph = selected.getFirst();
         if (graph instanceof final DragGraphic dragGraphic) {
           if (!dragGraphic.isGraphicComplete()) {
             graphicComplete = false;
@@ -1236,7 +1315,7 @@ public class View2d extends DefaultView2d<DicomImageElement> {
     }
 
     String pClose = "weasis.contextmenu.close";
-    if (LangUtil.getNULLtoTrue((Boolean) actionsInView.get(pClose))
+    if (LangUtil.nullToTrue((Boolean) actionsInView.get(pClose))
         && GuiUtils.getUICore().getSystemPreferences().getBooleanProperty(pClose, true)) {
       JMenuItem close = new JMenuItem(Messages.getString("View2d.close"));
       close.addActionListener(e -> View2d.this.setSeries(null, null));
